--- a/index.html
+++ b/index.html
@@ -1,16 +1,88 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <script href="script.js"></script>
-    <style href= "style.css"></style>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-</head>
-<body>
-    
-</body>
+    <title>NYT Search</title>
+  </head>
+  <body>
+    <!--HEADER-->
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div id="header" class="jumbotron">
+            <h1><i class="fa fa-newspaper-o " style="font-size:60px;color:white;"></i> New York Times Search</h1>
+          </div>    
+        </div>
+    </div>
+      <br>
+      <!--Input form-->
+      <div class="row">
+        <div class="col-12">
+            <div class="card">
+                <div class="card-header">
+                    <i class="fa fa-tasks " style="font-size:18px;color:navy;"></i> Search Parameters
+                </div>
+                    <form>
+                      <div class="form-group">
+                        <label for="search-term">Search Term</label>
+                        <input type="text" class="form-control" id="search-term" placeholder="Example input placeholder">
+                      </div>
+                      <div class="form-group">
+                        <label for="records-number">Number of Records to Retrieve</label>
+                        <input type="text" class="form-control" id="records-number" placeholder="Another input placeholder">
+                        <div class="form-group">
+                          <label for="start-year">Start Year(Optional)</label>
+                          <input type="text" class="form-control" id="start-year" placeholder="Example input placeholder">
+                        </div>
+                        <div class="form-group">
+                          <label for="end-year">End Year (Optional)</label>
+                          <input type="text" class="form-control" id="end-year" placeholder="Another input placeholder">
+                        </div>
+                      </div>
+                      <button type="button" class="btn btn-light" id="search-button"><i class="fa fa-search " style="font-size:18px;color:white;"></i> Search</button>
+                      <button type="button" class="btn btn-dark" id="clear-button"><i class="fa fa-trash " style="font-size:18px;color:white;"></i> Clear Results</button>
+                    </form>
+                </div>
+              </div>
+            </div>
+          </div>
+      <br>
+      <!--RESULTS-->
+      <div class="row">
+        <div class="col-12">
+            <div class="card">
+                <div class="card-header">
+                    <i class="fas fa-columns" style="font-size:18px;color:navy;"></i> Top Articles
+                </div>
+                <div class="card-body" id = "results">
+                </div>
+              </div>
+        </div>
+    </div>
+    <br>
+    <!--FOOTER-->
+    <div class="row">
+      <div class="col-12">
+          <footer>
+             <br>
+                <h6>Made with lots of headches</h6>           
+              <div class="card-body">
+              </div>
+          </footer>
+      </div>
+  </div>
+</div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src = "script.js"></script>
+  </body>
 </html>
